--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  background-color: red;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.horti {
+  font-size: 4em;
+  width: 2em;
+  text-align: center;
+  padding: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nossos-produtos {
+  font-size: 4em;
+  margin-left: 1em;
+}
+
+.fruteiro { 
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
+.fruta1 {
+  display: flex;
+  gap: 2em;
+}
+
+.fruta2 {
+  display: flex;
+  gap: 2em;
+}
+
+.caixa {
+  display: flex;
+  background-color: #F7E0CE;
+  width: 25em;
+  height: 35em;
+  border-radius: 25%;
+  position: relative;
+}
+
+.carrinho {
+  background-color:#D3C5BB;
+  width: 15em;
+  height: 15em;
+  border-radius: 25%;
+  position: absolute;
+  left: 4em;
+  margin-top: 3em;
+  display: flex;
+  position: relative;
+}
+
+.carrinho p {
+  background-color: #D3C5BB;
+  position: absolute;
+  left: 2em;
+  bottom: 2em;
+}
+
+.tudo {
+  display: flex;
+  gap: 2em;
 }
